# tang

./: A 股机构级全维度股票投资分析报告生成技能.txt  OpenClaw_A股机构级全维度股票投资分析报告生成技能_V5.0.0_规范稿.md  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/layer1_orchestration/: __init__.py  intent_classifier.py  market_env_detector.py  special_scene_router.py  stock_query_parser.py  task_orchestrator.py
src/layer2_data/: __init__.py  akshare_adapter.py  backup_sources.py  data_cache.py  data_normalizer.py  models.py  multi_source_validator.py  rate_limiter.py
src/layer3_analysis/: __init__.py  base_analyzer.py  strategy_factory.py
src/layer3_analysis/modules/: __init__.py  m01_business.py  m02_financial.py  m03_to_m25.py
src/layer3_analysis/scoring/: __init__.py  joint_decision_matrix.py  market_weight_adapter.py  scoring_engine_a.py  scoring_engine_b.py  scoring_engine_c.py
src/layer4_report/: __init__.py  consistency_checker.py  evidence_chain_validator.py  report_assembler.py  scenario_engine.py  vagueness_filter.py
src/layer5_output/: __init__.py  template_engine.py
src/layer5_output/templates/: full_report.html.j2  module_card.html.j2  scorecard.html.j2
tests/: test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_layer5.py  test_simulation_688522.py
